@@ -89,6 +89,8 @@
         support for stacked Nortel BayStack5520
           (http://www.packetfence.org/mantis/view.php?id=448)
         support for Enterasys::SecureStack C2
+        moved DHCP fingerprint update from configurator.pl
+          to installer.pl
 
 1.7.4
         undef operator in SNMP.pm
